--- a/views/home.html
+++ b/views/home.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <h1>Enter Your Information</h1>
-    <form action="#" method="post">
+    <form  action="/submit" method="post">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required><br><br>
         
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
+        <input type="email" id="email" email="email" required><br><br>
         
         <button type="submit">Submit</button>
     </form>
